<resources>
    <string name="app_name">TelegramProfileMotionLayout</string>
    <string name="_201023524084">+201023524084</string>
    <string name="username">@maryam0hamed</string>
    <string name="ProfileName">Maryam Mohamed</string>
    <string name="ProfileStatus">online</string>
    <string name="account">Account</string>
    <string name="ProfileNumber">+201023524084</string>
    <string name="ChangeNumberText">Tap to change Phone Number</string>
    <string name="usernameText">Username</string>
    <string name="ProfileBio">  𝒑𝒆𝒓𝒔𝒐𝒏 𝒊𝒔 𝒍𝒊𝒌𝒆 𝒘𝒉𝒂𝒕 𝒉𝒆 𝒍𝒐𝒗𝒆𝒔⁦ °•✯</string>
    <string name="BioText">Bio</string>
    <string name="settingsText">Settings</string>
    <string name="helpText">Help</string>
    <string name="chat_settings_text">Chat Settings</string>
    <string name="privacy_and_security_text">Privacy and Security</string>
    <string name="notifications_and_sounds_text">Notifications and Sounds</string>
    <string name="data_and_storage_text">Data and Storage</string>
    <string name="power_saving_text">Power Saving</string>
    <string name="chat_folders_text">Chat Folders</string>
    <string name="devices_text">Devices</string>
    <string name="language_text">Language</string>
    <string name="english_text">English</string>
    <string name="telegram_premium_text">Telegram Premium</string>
    <string name="ask_a_question_text">Ask a Question</string>
    <string name="telegram_faq_text">Telegram FAQ</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="telegram_for_android">Telegram for Android v9.6.7 (3363) store bundled arm64-v8a</string>
    <string name="floating_action">Floating Action</string>
    <string name="three_dots_icon">Three Dots Icon</string>
    <string name="profile_image">profile Image</string>
    <string name="search_icon">Search Icon</string>
    <string name="qr_code_icon">Qr Code Icon</string>
    <string name="back_icon">Back Icon</string>
</resources>