<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PrimaryConstraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ProfileConstraint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profileConstrainHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_profile_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profileConstrainHeight"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/ProfileConstraint"
        app:layout_constraintEnd_toEndOf="@id/ProfileConstraint"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/ProfileConstraint"
        app:layout_constraintTop_toTopOf="@id/ProfileConstraint"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/profile_photo"
        android:contentDescription="@string/profile_image" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/endpoint_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/Margin8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_photo"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/ic_back"
        app:layout_constraintStart_toEndOf="@id/ic_back"
        app:shapeAppearanceOverlay="@style/Circular" />

    <ImageView
        android:id="@+id/ic_three_dots"
        style="@style/ProfileIcons"
        app:layout_constraintEnd_toEndOf="@id/ProfileConstraint"
        app:layout_constraintTop_toTopOf="@id/ProfileConstraint"
        app:srcCompat="@drawable/dots_three_vertical"
        android:contentDescription="@string/three_dots_icon" />

    <ImageView
        android:id="@+id/ic_search"
        style="@style/ProfileIcons"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ic_three_dots"
        app:layout_constraintEnd_toStartOf="@+id/ic_three_dots"
        app:layout_constraintTop_toTopOf="@+id/ic_three_dots"
        app:srcCompat="@drawable/search_icon"
        android:contentDescription="@string/search_icon" />


    <ImageView
        android:id="@+id/ic_qrcode"
        style="@style/ProfileIcons"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/ic_search"
        app:layout_constraintEnd_toStartOf="@+id/ic_search"
        app:layout_constraintTop_toTopOf="@+id/ic_search"
        app:srcCompat="@drawable/qrcode"
        android:contentDescription="@string/qr_code_icon" />

    <ImageView
        android:id="@+id/ic_back"
        style="@style/ProfileIcons"
        app:layout_constraintStart_toStartOf="@id/ProfileConstraint"
        app:layout_constraintTop_toTopOf="@id/ProfileConstraint"
        app:srcCompat="@drawable/backspace"
        android:contentDescription="@string/back_icon" />

    <TextView
        android:id="@+id/tv_Profile_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/Margin16dp"
        android:text="@string/ProfileName"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tv_profile_status"
        app:layout_constraintStart_toStartOf="@id/ProfileConstraint" />

    <TextView
        android:id="@+id/tv_profile_status"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/Margin16dp"
        android:text="@string/ProfileStatus"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/ProfileConstraint"
        app:layout_constraintStart_toStartOf="@id/tv_Profile_name" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/Margin16dp"
        android:src="@drawable/camera_plus"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/ProfileConstraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ProfileConstraint"
        app:shapeAppearanceOverlay="@style/FloatingActionCorners"
        app:tint="@color/dark_gray"
        android:contentDescription="@string/floating_action" />


    <ScrollView
        android:id="@+id/main_scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/light_gray"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileConstraint"
        app:layout_constraintVertical_bias="0.003">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile_image">

            <LinearLayout
                style="@style/UserDetailsRegion"
                android:background="@color/white">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/FieldsHeight"
                    android:layout_marginStart="@dimen/Margin16dp"
                    android:layout_marginTop="@dimen/Margin8dp"
                    android:gravity="center_vertical"
                    android:text="@string/account"
                    android:textColor="@color/titles_color" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithoutDrawable"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/ProfileNumber" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithoutDrawable"
                    android:text="@string/ChangeNumberText"
                    android:textColor="@color/dark_gray" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/MediumDivider" />
            </LinearLayout>

            <LinearLayout
                style="@style/UserDetailsRegion"
                android:background="@color/white">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithoutDrawable"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/username" />

                <com.google.android.material.textview.MaterialTextView
                   style="@style/UserDetailsRegionChildrenWithoutDrawable"
                    android:text="@string/usernameText"
                    android:textColor="@color/dark_gray" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/MediumDivider" />

            </LinearLayout>

            <LinearLayout
                style="@style/UserDetailsRegion"
                android:background="@color/white">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithoutDrawable"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:text="@string/ProfileBio" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithoutDrawable"
                    android:text="@string/BioText"
                    android:textColor="@color/dark_gray" />

            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                style="@style/LargeDivider"/>

            <LinearLayout
                style="@style/UserDetailsRegion"
                android:background="@color/white">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/SettingsTitles"
                    android:text="@string/settingsText" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithDrawable"
                    android:text="@string/chat_settings_text"
                    app:drawableStartCompat="@drawable/chat_round" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/SmallDivider"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithDrawable"
                    android:text="@string/privacy_and_security_text"
                    app:drawableStartCompat="@drawable/lock_square" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/SmallDivider"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithDrawable"
                    android:text="@string/notifications_and_sounds_text"
                    app:drawableStartCompat="@drawable/notification" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/SmallDivider"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithDrawable"
                    android:text="@string/data_and_storage_text"
                    app:drawableStartCompat="@drawable/graph"/>

                <com.google.android.material.divider.MaterialDivider
                    style="@style/SmallDivider"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithDrawable"
                    android:text="@string/power_saving_text"
                    app:drawableStartCompat="@drawable/battery_charging" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/SmallDivider"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithDrawable"
                    android:text="@string/chat_folders_text"
                    app:drawableStartCompat="@drawable/folder"/>

                <com.google.android.material.divider.MaterialDivider
                    style="@style/SmallDivider"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithDrawable"
                    android:text="@string/devices_text"
                    app:drawableStartCompat="@drawable/devices" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/SmallDivider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/SettingsHeight"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/SettingsHeight"
                        android:layout_width="0dp"
                        android:layout_marginStart="@dimen/Margin16dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:drawablePadding="@dimen/DrawablePadding"
                        android:text="@string/language_text"
                        app:drawableStartCompat="@drawable/language"
                        app:drawableTint="@color/dark_gray" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/SettingsHeight"
                        android:layout_width="0dp"
                        android:layout_marginEnd="@dimen/Margin16dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:text="@string/english_text"
                        android:textColor="@color/titles_color" />
                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    style="@style/LargeDivider"/>


                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithDrawableStar"
                    android:text="@string/telegram_premium_text"
                    app:drawableStartCompat="@drawable/star" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:backgroundTint="@color/light_gray" />

            </LinearLayout>

            <LinearLayout
                style="@style/UserDetailsRegion"
                android:background="@color/white">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/SettingsTitles"
                    android:text="@string/helpText" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithDrawable"
                    android:text="@string/ask_a_question_text"
                    app:drawableStartCompat="@drawable/chat_dots" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/SmallDivider"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithDrawable"
                    android:text="@string/telegram_faq_text"
                    app:drawableStartCompat="@drawable/question" />

                <com.google.android.material.divider.MaterialDivider
                    style="@style/SmallDivider"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/UserDetailsRegionChildrenWithDrawable"
                    android:text="@string/privacy_policy_text"
                    app:drawableStartCompat="@drawable/shield_check" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/Margin8dp"
                android:layout_marginBottom="@dimen/Margin8dp"
                android:gravity="center"
                android:text="@string/telegram_for_android"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/TextSize16sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.motion.widget.MotionLayout>
